[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_03.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/ChunkyPixels.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Scripts/BattleDialogue.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_07.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/ChunkyPixelsNormal.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_10.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_08.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_09.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_11.png" type="Texture" id=9]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Scripts/BattleMenu.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Node2D" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battle_UI04" type="Sprite" parent="."]
position = Vector2( 16, 96 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -136.0
margin_top = -16.0
margin_right = 136.0
margin_bottom = 16.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
margin_left = -96.0
margin_top = -4.0
margin_right = 96.0
margin_bottom = -4.0
custom_constants/separation = 48
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Control" parent="Menu"]

[node name="AttackText" type="RichTextLabel" parent="Menu/Attack"]
margin_left = -17.3348
margin_top = 6.66516
margin_right = 82.6652
margin_bottom = 111.665
custom_fonts/normal_font = ExtResource( 5 )
text = "Attack"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackIcon" type="Sprite" parent="Menu/Attack"]
position = Vector2( 152, 112 )
texture = ExtResource( 4 )

[node name="Skills" type="Control" parent="Menu"]
margin_left = 48.0
margin_right = 48.0

[node name="SkillsText" type="RichTextLabel" parent="Menu/Skills"]
margin_left = -13.4972
margin_top = 6.66516
margin_right = 86.5028
margin_bottom = 111.665
custom_fonts/normal_font = ExtResource( 5 )
text = "Skills"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsIcon" type="Sprite" parent="Menu/Skills"]
position = Vector2( 152, 112 )
texture = ExtResource( 7 )

[node name="Items" type="Control" parent="Menu"]
margin_left = 96.0
margin_right = 96.0

[node name="ItemsText" type="RichTextLabel" parent="Menu/Items"]
margin_left = -14.4983
margin_top = 6.66516
margin_right = 85.5017
margin_bottom = 111.665
custom_fonts/normal_font = ExtResource( 5 )
text = "Items"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsIcon" type="Sprite" parent="Menu/Items"]
position = Vector2( 152, 112 )
texture = ExtResource( 8 )

[node name="Defend" type="Control" parent="Menu"]
margin_left = 144.0
margin_right = 144.0

[node name="DefendText" type="RichTextLabel" parent="Menu/Defend"]
margin_left = -19.0
margin_top = 7.0
margin_right = 81.0
margin_bottom = 112.0
custom_fonts/normal_font = ExtResource( 5 )
text = "Defend"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefendIcon" type="Sprite" parent="Menu/Defend"]
position = Vector2( 152, 112 )
texture = ExtResource( 6 )

[node name="Run" type="Control" parent="Menu"]
margin_left = 192.0
margin_right = 192.0

[node name="RunText" type="RichTextLabel" parent="Menu/Run"]
margin_left = -10.6697
margin_top = 6.66516
margin_right = 89.3303
margin_bottom = 111.665
custom_fonts/normal_font = ExtResource( 5 )
text = "Bye!"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunIcon" type="Sprite" parent="Menu/Run"]
position = Vector2( 152, 112 )
texture = ExtResource( 9 )
